sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:21: error: Unmatched closing brace '}' ignored here
} 
^AlgCocktailSort1:24: error: eof expected but '}' found.
}
^