sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var aucuntri:Int =1
  while(aucuntri!=0){
    aucuntri=0
  //for(i<- 0 to getNombreValeurs()-2){
 
    // if(!plusPetit(i,i+1)){
      //echange(i,i+1)
       //aucuntri+=1
    }
   for(j<- getNombreValeurs()-2 to 0){
     if(!plusPetit(j,j+1)){
      echange(j,j+1)
       aucuntri+=1
    }
   } 
  
}
}
}